<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardMainServices"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/btn_rounded_white"
    android:paddingStart="@dimen/_10sdp"
    android:paddingEnd="@dimen/_10sdp"
    app:cardCornerRadius="@dimen/_6sdp"
    app:cardUseCompatPadding="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_itemimage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_155sdp"
            android:contentDescription="@string/app_name"
            android:fitsSystemWindows="true"
            android:scaleType="fitXY"
            android:src="@mipmap/placeholderimage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_itemname"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center|start"
            android:text="@string/delux"
            android:textColor="@color/colorTxtGreyMid"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_itemimage" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_nonveg"
            android:layout_width="@dimen/_10sdp"
            android:layout_height="10dp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center|start"
            android:src="@drawable/img_nonveg"
            android:text="@string/delux"
            android:textColor="@color/colorTxtGreyMid"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/tv_itemname"
            app:layout_constraintTop_toBottomOf="@+id/img_itemimage" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:fitsSystemWindows="true"
            android:fontFamily="sans-serif-medium"
            android:gravity="center|start"
            android:text="@string/tags"
            android:textColor="@color/colorTxtGreyLight"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_itemname" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="sans-serif-black"
            android:gravity="center|start"
            android:text="@string/_150_grm_30cm"
            android:textColor="@color/colorTxtGreyLight"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_tags" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:background="@drawable/btn_rect_rounded_black"
            android:fontFamily="sans-serif"
            android:padding="@dimen/_8sdp"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:text="@string/_40_usd"
            android:textColor="@color/white_dull"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_tags" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_add_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:background="@drawable/btn_rect_rounded_green"
            android:fontFamily="sans-serif"
            android:padding="@dimen/_8sdp"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:text="Added + 1"
            android:textColor="@color/white_dull"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_tags" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>