<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/_15sdp"
    android:layout_marginEnd="@dimen/_15sdp"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_470sdp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:statusBarScrim="@android:color/transparent">

            <FrameLayout
                android:id="@+id/view_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="pin">

                <com.smarteist.autoimageslider.SliderView
                    android:id="@+id/imageSlider"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    app:sliderAnimationDuration="600"
                    app:sliderAutoCycleDirection="back_and_forth"
                    app:sliderAutoCycleEnabled="true"
                    app:sliderIndicatorAnimationDuration="800"
                    app:sliderIndicatorGravity="center_horizontal|bottom"
                    app:sliderIndicatorMargin="15dp"
                    app:sliderIndicatorMarginBottom="@dimen/_60sdp"
                    app:sliderIndicatorOrientation="horizontal"
                    app:sliderIndicatorPadding="4dp"
                    app:sliderIndicatorRadius="2dp"
                    app:sliderIndicatorSelectedColor="#5A5A5A"
                    app:sliderIndicatorUnselectedColor="#FFF"
                    app:sliderScrollTimeInSec="1"
                    app:sliderStartAutoCycle="true" />

            </FrameLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_3sdp"
                android:gravity="top"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <TextView
                    android:id="@+id/toolbar_title"
                    style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:gravity="center_vertical" />
            </androidx.appcompat.widget.Toolbar>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@drawable/top_rounded_border"
                android:elevation="0dp"
                android:paddingTop="@dimen/_15sdp"
                app:tabGravity="start"
                app:tabIndicatorColor="@color/transparent"
                app:tabMode="fixed"
                app:tabSelectedTextColor="@color/black"
                app:tabTextAppearance="@style/Theme.MyTabLayout"
                app:tabTextColor="@color/colorTxtGreyLight" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
        <LinearLayout
            android:id="@+id/linear_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:paddingStart="@dimen/_16sdp"
            android:background="@color/white"
            android:layout_gravity="bottom"
            android:padding="@dimen/_5sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/filters"
                android:textAllCaps="true"
                android:textColor="@color/colorTxtGreyLight"
                android:textSize="@dimen/_10sdp"></androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:background="@drawable/rounded_grey_border_design"
                android:fontFamily="sans-serif-condensed"
                android:padding="@dimen/_3sdp"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:text="@string/spicy"
                android:textColor="@color/colorTxtGreyLight"
                android:textSize="@dimen/_10sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:background="@drawable/rounded_grey_border_design"
                android:fontFamily="sans-serif-condensed"
                android:padding="@dimen/_3sdp"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:text="@string/vegan"
                android:textColor="@color/colorTxtGreyLight"
                android:textSize="@dimen/_10sdp" />

        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <com.andremion.counterfab.CounterFab
        android:id="@+id/cart_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/white"
        app:badgeTextColor="@color/white"
        app:badgeBackgroundColor="@color/colorTxtGreen"
        android:background="@color/white"
        android:src="@drawable/img_cart"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_40sdp"
        android:layout_gravity="bottom|end" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
